# fossology-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.reuse/: dep5
src/: api_objects.rs  auth.rs  from_spdx.rs  info.rs  job.rs  lib.rs  license.rs  upload.rs  utilities.rs
