# SPDX-FileCopyrightText: 2020-2021 HH Partners
# 
# SPDX-License-Identifier: MIT

[package]
name = "fossology-rs"
version = "0.1.1"
authors = ["Mikko Murto <mikko.murto@hhpartners.fi>"]
edition = "2018"
license = "MIT"
description = "Interact with Fossology"
readme = "README.md"
keywords = ["Fossology", "Licensing"]
categories = ["api-bindings"]
homepage = "https://github.com/doubleopen-project/fossology-rs"
repository = "https://github.com/doubleopen-project/fossology-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
thiserror = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
version-compare = "0.0.13"

[dev-dependencies]
rand = "0.8"
sha2 = "0.9"
hex = "0.4"